<resources>
    <string name="app_name">News Today</string>
    <string name="action_settings">Settings</string>
    <string name="tab_text_1">Top Headlines</string>
    <string name="tab_text_2">Technology</string>
    <string name="tab_text_3">Business</string>
    <string name="tab_text_4">Sports</string>
    <string name="tab_text_5">Entertainment</string>
    <string name="tab_text_6">Science</string>
    <string name="tab_text_7">Health</string>

    <string name="top_news">top-headlines</string>
    <string name="entertainment">entertainment</string>
    <string name="health">health</string>
    <string name="science">science</string>
    <string name="sports">sports</string>
    <string name="technology">technology</string>
    <string name="business">business</string>

    <string-array name="country_list_entries">
        <item>United States</item>
        <item>Argentine</item>
        <item>Austria</item>
        <item>Australia</item>
        <item>Belgium</item>
        <item>Bulgaria</item>
        <item>Canada</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Cuba</item>
        <item>Czech Republic</item>
        <item>Egypt</item>
        <item>France</item>
        <item>Greece</item>
        <item>Germany</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Japan</item>
        <item>Malaysia</item>
        <item>Mexico</item>
        <item>Morocco</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nigeria</item>
        <item>Norway</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Saudi Arabia</item>
        <item>Serbia</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Taiwan</item>
        <item>Thailand</item>
        <item>Turkey</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>Venezuela</item>
    </string-array>

    <string-array name="country_list_values">
        <item>us</item>
        <item>ar</item>
        <item>at</item>
        <item>au</item>
        <item>be</item>
        <item>bg</item>
        <item>ca</item>
        <item>cn</item>
        <item>co</item>
        <item>cu</item>
        <item>cz</item>
        <item>eg</item>
        <item>fr</item>
        <item>gr</item>
        <item>de</item>
        <item>hk</item>
        <item>hu</item>
        <item>in</item>
        <item>id</item>
        <item>ie</item>
        <item>il</item>
        <item>it</item>
        <item>jp</item>
        <item>my</item>
        <item>mx</item>
        <item>ma</item>
        <item>nl</item>
        <item>nz</item>
        <item>ng</item>
        <item>no</item>
        <item>ph</item>
        <item>pl</item>
        <item>ro</item>
        <item>ru</item>
        <item>sa</item>
        <item>rs</item>
        <item>sg</item>
        <item>sk</item>
        <item>si</item>
        <item>za</item>
        <item>kr</item>
        <item>se</item>
        <item>ch</item>
        <item>tw</item>
        <item>th</item>
        <item>tr</item>
        <item>ua</item>
        <item>ae</item>
        <item>gb</item>
        <item>ve</item>
    </string-array>

    <string-array name="theme_entries">
        <item>Light</item>
        <item>Dark</item>
        <item>System(Default)</item>
    </string-array>

    <string-array name="theme_value">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>
