<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/category_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scrollview"
        android:layout_marginBottom="50dp"
        android:orientation="vertical" />

    <HorizontalScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_news"
                style="@style/My_Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/tab_text_1"
                android:textColor="@color/chip_selector_text_color" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_tech"
                style="@style/My_Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_2"
                android:textColor="@color/chip_selector_text_color" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_business"
                style="@style/My_Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_3"
                android:textColor="@color/chip_selector_text_color" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_health"
                style="@style/My_Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_7"
                android:textColor="@color/chip_selector_text_color" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_enter"
                style="@style/My_Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_5"
                android:textColor="@color/chip_selector_text_color" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_science"
                style="@style/My_Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_6"
                android:textColor="@color/chip_selector_text_color" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_sports"
                style="@style/My_Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_4"
                android:textColor="@color/chip_selector_text_color" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>
</RelativeLayout>